--- a/src/public/index.html
+++ b/src/public/index.html
@@ -15,9 +15,28 @@
 <body>
     <nav class="navbar navbar-light bg-secondary">
         <a class="navbar-brand mx-auto" href="/">Chat cifrado cuanticamente 🤯</a>
+        <div id="user_name"></div>
     </nav>
-    <div class="container">
-        <div class="col-md-6 mt-4">
+
+    <div class="card col-md-4 mt-5 mx-auto" id="nickWrap">
+        <div class="card-header">
+            <h3 class="text-dark">Iniciar Sesión</h3>
+        </div>
+        <div class="card-body">
+            <form id="nickForm">
+                <div class="input-group mb-3">
+                    <input type="text" id="nickName" class="form-control" placeholder="User">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="submit">Ingresar</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+    </div>
+
+    <div class="container" id="containerWrap">
+        <div class="col-md-6 mt-4 mx-auto">
             <div class="card-header">
                 <h4>🤫</h4>
             </div>
