--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,13 +9,13 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/main.js"></script>
+    <script src="https://kit.fontawesome.com/086f947000.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-    <nav class="navbar navbar-light bg-secondary">
+    <nav class="navbar navbar-light">
         <a class="navbar-brand mx-auto" href="/">Chat cifrado cuanticamente 🤯</a>
-        <div id="user_name"></div>
     </nav>
 
     <div class="card col-md-4 mt-5 mx-auto" id="nickWrap">
@@ -24,10 +24,10 @@
         </div>
         <div class="card-body">
             <form id="nickForm">
-                <div class="input-group mb-3">
+                <div class="input-group mb-3 mt-4">
                     <input type="text" id="nickName" class="form-control" placeholder="User">
                     <div class="input-group-append">
-                        <button class="btn btn-outline-secondary" type="submit">Ingresar</button>
+                        <button class="btn btn-outline-secondary" type="submit"><i class="fas fa-sign-in-alt"></i></button>
                     </div>
                 </div>
             </form>
@@ -38,7 +38,7 @@
     <div class="container" id="containerWrap">
         <div class="col-md-6 mt-4 mx-auto">
             <div class="card-header">
-                <h4>🤫</h4>
+                <div id="user_name"></div>
             </div>
             <div id="chat" class="car-body">
             </div>
@@ -52,11 +52,16 @@
                 </nav>
                 <div class="input-group mb-3">
                     <input id="mensaje" type="text" class="form-control" placeholder="Mensaje">
-                    <button class="btn" type="submit" id="button-enviar">Enviar</button>
+                    <button class="btn" type="submit" id="button-enviar"><i class="fas fa-paper-plane"></i></button>
                 </div>
             </form>
         </div>
     </div>
-
+    <footer>
+        <div>
+            <a href="https://github.com/rvv3nd/quantum_cipher/blob/main/src/public/js/main.js"><img src="https://img.icons8.com/material-sharp/24/000000/github.png"/></a>
+        </div>
+        <div><a href="https://github.com/rvv3nd/quantum_cipher/blob/main/src/public/js/main.js">Código de la práctica</a></div>
+    </footer>
 </body>
 </html>
